<resources>
    <string name="app_name">Assignment2</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_profile">Profile</string>
    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_theme">Theme preference</string>
    <string name="label_notifications">Enable notifications</string>
    <string name="action_save_preferences">Save Preferences</string>
    <string name="action_reset_preferences">Reset Preferences</string>
    <string name="preferences_saved">Preferences saved</string>
    <string name="preferences_reset">Preferences cleared</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_email_invalid">Enter a valid email</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="profile_empty_title">No preferences yet</string>
    <string name="profile_empty_subtitle">Save your settings to see them here.</string>
    <string name="not_set">Not set</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string-array name="theme_options">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>